# webarcade

./: .gitignore  Cargo.toml  HOW_TO_USE_EVENTSUB_EVENTS.md  LICENSE  PLUGIN_DEVELOPMENT.md  README.md  WebArcade_Postman_Collection.json  package-lock.json  package.json  plugins.json  readme.md  rspack-progress-plugin.js  rspack.config.js  rspack.overlay.config.js  tailwind.config.js
api/: Cargo.toml
api/src/: lib.rs
app/: Cargo.toml  build.rs  index.html  package-lock.json  package.json  vite.config.js
app/plugins/: demo.js  hello-world.js  themes.js
app/scripts/: build.js
app/src/: App.jsx  index.jsx  main.rs
bridge/: Cargo.toml  EVENTSUB_SETUP.md
bridge/src/: lib.rs  main.rs  main_plugin_example.rs
cli/: Cargo.toml
cli/src/: main.rs
config/: README.md  twitch_config.toml.example
layouts/: test.json
plugins/alerts/: AlertsViewport.jsx  mod.rs  overlay.jsx
plugins/alexa/: AlexaViewport.jsx  mod.rs  router.rs
plugins/auction/: mod.rs
plugins/bridge/: BridgeModal.jsx
plugins/channel_commands/: mod.rs
plugins/chat/: index.jsx  overlay.jsx
plugins/code/: Cargo.toml  CodeEditorViewport.jsx  EditorViewport.jsx  FileTree.jsx  index.jsx  mod.rs  router.rs
plugins/confessions/: mod.rs  router.rs
plugins/counters/: CountersViewport.jsx  router.rs
plugins/currency/: mod.rs  router.rs
plugins/dashboard/: WidgetGrid.jsx  api.js  index.jsx  router.rs
plugins/database/: DatabaseMenu.jsx  DatabaseViewport.jsx  databaseStore.js  index.jsx  mod.rs  router.rs
plugins/default/: DashboardViewport.jsx  index.jsx
plugins/demo/: Cargo.toml  DemoBottomPanel.jsx  DemoFooterButton.jsx  DemoLeftPanel.jsx  DemoRightPanel.jsx  DemoViewport.jsx  GuideViewport.jsx  index.jsx  mod.rs  router.rs  viewport.jsx
plugins/discord/: DiscordViewport.jsx  index.jsx  mod.rs  router.rs
plugins/engine/: index.jsx
plugins/files/: router.rs
plugins/goals/: GoalsViewport.jsx  index.jsx
plugins/hello-world/: bottom-panel.jsx  index.jsx  left-panel.jsx  right-panel.jsx  viewport.jsx
plugins/household/: router.rs
plugins/hue/: index.jsx  mod.rs  router.rs
plugins/layout_manager/: index.jsx
plugins/levels/: database.rs
plugins/menu/: index.jsx
plugins/mood_tracker/: overlay.jsx  router.rs
plugins/notes/: NotesPanel.jsx  NotesViewport.jsx  mod.rs  router.rs
plugins/overlay_manager/: OverlayManagerPanel.jsx  OverlayManagerViewport.jsx  mod.rs  router.rs
plugins/overlays/: mod.rs  router.rs
plugins/packs/: mod.rs  router.rs
plugins/philips_hue/: README.md  index.jsx  mod.rs  router.rs
plugins/plugin_ide/: index.jsx  router.rs  viewport.jsx
plugins/roulette/: RouletteViewport.jsx  database.rs  mod.rs  overlay.jsx  router.rs
plugins/snake-game/: index.jsx  panel.jsx  viewport.jsx
plugins/snow/: overlay.jsx
plugins/song_requests/: SongRequestsViewport.jsx  index.jsx
plugins/status/: mod.rs
plugins/system/: router.rs
plugins/systemMonitor/: Cargo.toml  SystemMonitorFooterButton.jsx  index.jsx  package.json
plugins/text_commands/: TextCommandsViewport.jsx  index.jsx  mod.rs  router.rs
plugins/themes/: ThemeFooterButton.jsx  index.jsx  themes.jsx
plugins/ticker/: index.jsx  router.rs
plugins/timer/: TimerViewport.jsx  index.jsx  mod.rs  router.rs
plugins/todos/: database.rs  mod.rs
plugins/tts/: index.jsx
plugins/twitch/: README.md  SETUP.md  TwitchSettingsViewport.jsx  api.rs  auth.rs  commands.rs  eventsub.rs  index.jsx  (+6 more)
plugins/twitch-chat/: index.jsx
plugins/twitch-setup/: Panel.jsx  README.md  Viewport.jsx  index.jsx
public/: twitch-callback.html
scripts/: build_plugin.js  create-plugin.js  discover-backend-plugins.js  discover-plugins.cjs  discover-plugins.js  migrate-to-unified-plugins.js  prepare-build.js  rename-overlays.js  start-with-bridge.js
src/: App.jsx  app.rs  base.css  cli.rs  entry-client.jsx  index.css  ipc_bridge.js  lib.rs  mime.rs  protocol.rs  request.rs  routing.rs  window.rs
src-tauri/: Cargo.toml  plugins.json  tauri.conf.json
(+272 files in other folders)
