[package]
name = "webarcade"
version = "1.0.5"
edition = "2021"
description = "SolidJS + Rust desktop framework"
license = "MIT"
repository = "https://github.com/renzora/webarcade"

[lib]
name = "webarcade"
path = "src/lib.rs"

[[bin]]
name = "webarcade"
path = "src/cli.rs"

[dependencies]
wry = "0.47"
tao = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
dirs = "5"
urlencoding = "2"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "=2.0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_System_Console"] }
