[package]
name = "systemMonitor"
version = "1.0.0"
edition = "2021"

[dependencies]
sysinfo = "0.30"
nvml-wrapper = "0.10"

[routes]
"GET /stats" = "handle_stats"
"GET /cpu" = "handle_cpu"
"GET /memory" = "handle_memory"
"GET /gpu" = "handle_gpu"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
